deployments/local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moodtracker-route
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "moodtrackerapi.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: moodtrackerapi
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /producer
      backendRefs:
        - group: ""
          kind: Service
          name: supportive-message-producer
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /consumer
      backendRefs:
        - group: ""
          kind: Service
          name: supportive-message-consumer
          port: 80
          weight: 1
